--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,11 @@ asyncpg = "^0.29.0"
 aioredis = "^2.0.1"
 slowapi = "^0.1.9"
 environ = "^1.0"
+sphinx = "^7.2.6"
 
+
+[tool.poetry.group.dev.dependencies]
+sphinx = "^7.2.6"
 
 [build-system]
 requires = ["poetry-core"]
