--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ aioredis = "^2.0.1"
 slowapi = "^0.1.9"
 environ = "^1.0"
 sphinx = "^7.2.6"
+pytest = "^8.1.1"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.6"
+pip = "^24.0"
+install = "^1.3.5"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -37,3 +42,7 @@ sphinx = "^7.2.6"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
